# kumpel

./: .gitignore  README.md  ansitext.py  db.py  init_db.py  main.py  pyproject.toml  requirements.txt  setup.py  test.sh  test_db.py  test_main.py
jkgflashcards/: __init__.py  __main__.py  helpers.py
jkgflashcards/modules/: helpers.py
kumpel/: __init__.py  __main__.py  helpers.py
src/kumpel/: __init__.py
src/modules/: helpers.py
