[project]
name = "kumpel"
version = "0.1.0"
description = "LLM-assisted flashcard-based German language learning utility."
readme = "README.md"
authors = [
    { name = "Josh Garber", email = "josh@jkgarber.com" }
]
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.30.0",
    "python-dotenv>=1.1.1",
    "scipy>=1.15.3",
    "sounddevice>=0.5.2",
]

[project.scripts]
kumpel = "kumpel:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
